--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.51.23",
     "axios": "^1.7.4",
     "firebase": "^10.12.5",
     "flowbite-react": "^0.10.1",
